# sdl3-emscripten-test

./: CMakeLists.txt  main.c
scripts/: build.bash  setup-emscripten.bash
